--- a/index.html
+++ b/index.html
@@ -3,9 +3,202 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dhtml-css-bootstrap-dashboard</title>
+    <title>html-css-bootstrap-dashboard</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/debug.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Catalogo Libri</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Anagrafica Utenti</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Storico Prestiti</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Help
+                    </a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Cerca" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Cerca</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+    </header>
+      <div class="row mt-4">
+          <div class="col-12 col-lg-9">
+              <h2>Catalogo Libri</h2>
+              <table class="table table-striped">
+                  <thead>
+                      <tr>
+                          <th scope="col">Titolo</th>
+                          <th scope="col">Data prestito</th>
+                          <th scope="col">Stato</th>
+                          <th scope="col">Azioni</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                          <td>I pilastri della terra</td>
+                          <td>-</td>
+                          <td><span class="badge bg-success">Disponibile</span></td>
+                          <td>
+                              <button class="btn btn-sm btn-primary">Edit</button>
+                              <button class="btn btn-sm btn-danger">Delete</button>
+                          </td>
+                      </tr>
+
+                      <tr>
+                        <td>I promessi sposi</td>
+                        <td>-</td>
+                        <td><span class="badge bg-success">Disponibile</span></td>
+                        <td>
+                            <button class="btn btn-sm btn-primary">Edit</button>
+                            <button class="btn btn-sm btn-danger">Delete</button>
+                        </td>
+                    </tr>
+                    <tr>
+                      <td>Il signore degli anelli</td>
+                      <td>18/10/2023</td>
+                      <td><span class="badge bg-warning">In prestito</span></td>
+                      <td>
+                          <button class="btn btn-sm btn-primary">Edit</button>
+                          <button class="btn btn-sm btn-danger">Delete</button>
+                      </td>
+                  </tr>
+                  <tr>
+                    <td>Harry Potter e la pietra filosofale</td>
+                    <td>-</td>
+                    <td><span class="badge bg-success">Disponibile</span></td>
+                    <td>
+                        <button class="btn btn-sm btn-primary">Edit</button>
+                        <button class="btn btn-sm btn-danger">Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>Il codice Da Vinci</td>
+                  <td>-</td>
+                  <td><span class="badge bg-danger">Non disponibile</span></td>
+                  <td>
+                      <button class="btn btn-sm btn-primary">Edit</button>
+                      <button class="btn btn-sm btn-danger">Delete</button>
+                  </td>
+              </tr>
+              <tr>
+                <td>Shining</td>
+                <td>-</td>
+                <td><span class="badge bg-success">Disponibile</span></td>
+                <td>
+                    <button class="btn btn-sm btn-primary">Edit</button>
+                    <button class="btn btn-sm btn-danger">Delete</button>
+                </td>
+            </tr>
+            <tr>
+              <td>La divina commedia</td>
+              <td>21/09/2023</td>
+              <td><span class="badge bg-warning">In prestito</span></td>
+              <td>
+                  <button class="btn btn-sm btn-primary">Edit</button>
+                  <button class="btn btn-sm btn-danger">Delete</button>
+              </td>
+          </tr>
+          <tr>
+            <td>Il trono di spade</td>
+            <td>-</td>
+            <td><span class="badge bg-success">Disponibile</span></td>
+            <td>
+                <button class="btn btn-sm btn-primary">Edit</button>
+                <button class="btn btn-sm btn-danger">Delete</button>
+            </td>
+        </tr>
+        <tr>
+          <td>Il mondo di Sofia</td>
+          <td>-</td>
+          <td><span class="badge bg-danger">Non disponibile</span></td>
+          <td>
+              <button class="btn btn-sm btn-primary">Edit</button>
+              <button class="btn btn-sm btn-danger">Delete</button>
+          </td>
+      </tr>
+      <tr>
+        <td>Le cronache di Narnia</td>
+        <td>25/07/2023</td>
+        <td><span class="badge bg-warning">In prestito</span></td>
+        <td>
+            <button class="btn btn-sm btn-primary">Edit</button>
+            <button class="btn btn-sm btn-danger">Delete</button>
+        </td>
+    </tr>
+    <tr>
+      <td>Il piccolo principe</td>
+      <td>-</td>
+      <td><span class="badge bg-success">Disponibile</span></td>
+      <td>
+          <button class="btn btn-sm btn-primary">Edit</button>
+          <button class="btn btn-sm btn-danger">Delete</button>
+      </td>
+  </tr>
+  <tr>
+    <td>La storia inifinita</td>
+    <td>-</td>
+    <td><span class="badge bg-success">Disponibile</span></td>
+    <td>
+        <button class="btn btn-sm btn-primary">Edit</button>
+        <button class="btn btn-sm btn-danger">Delete</button>
+    </td>
+</tr>
+                      <!-- Repeat rows for all books -->
+                  </tbody>
+              </table>
+          </div>
+
+          <div class="col-12 col-lg-3">
+              <div class="card mb-4">
+                  <div class="card-header">Todo</div>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item">
+                          <input type="checkbox"> Chiamare segreteria
+                      </li>
+                      <li class="list-group-item">
+                          <input type="checkbox"> Mandare avvisi prestiti scaduti
+                      </li>
+                      <li class="list-group-item">
+                          <input type="checkbox"> Ordinare nuovi libri
+                      </li>
+                  </ul>
+              </div>
+
+              <div class="card">
+                  <div class="card-header">F.A.Q.</div>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item">Come aggiungere un nuovo libro?</li>
+                      <li class="list-group-item">Come posso accedere all'anagrafica utenti?</li>
+                      <li class="list-group-item">Posso usare questa dashboard da mobile?</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+
+   <!-- Bootstrap 5 JS Bundle -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> 
 </body>
+
 </html>
